src/widgets/snapshots/p5__widgets__scrollable_list__tests__basic_scrollable.snap
---
source: src/widgets/scrollable_list.rs
assertion_line: 126
expression: terminal.backend()
---
"┌Scrollable List───────────────────────────────────────────────────────────────┐"
"│Item 1                                                                        │"
"│Item 2                                                                        │"
"│Item 3                                                                        │"
"│Item 4                                                                        │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
