src/widgets/snapshots/p5__widgets__scrollable_list__tests__vertical_scroll.snap
---
source: src/widgets/scrollable_list.rs
assertion_line: 177
expression: terminal.backend()
---
"┌Scrollable List───────────────────────────────────────────────────────────────┐"
"│Item 14                                                                       ▲"
"│Item 15                                                                       ║"
"│Item 16                                                                       ║"
"│Item 17                                                                       ║"
"│Item 18                                                                       ║"
"│Item 19                                                                       ║"
"│Item 20                                                                       ║"
"│Item 21                                                                       █"
"│Item 22                                                                       █"
"│Item 23                                                                       █"
"│Item 24                                                                       █"
"│Item 25                                                                       █"
"│Item 26                                                                       █"
"│Item 27                                                                       █"
"│Item 28                                                                       █"
"│Item 29                                                                       █"
"│Item 30                                                                       ║"
"│Item 31                                                                       ▼"
"└──────────────────────────────────────────────────────────────────────────────┘"
