src/widgets/snapshots/p5__widgets__scrollable_list__tests__vertical_scroll_first_page.snap
---
source: src/widgets/scrollable_list.rs
assertion_line: 200
expression: terminal.backend()
---
"┌Scrollable List───────────────────────────────────────────────────────────────┐"
"│Item 1                                                                        ▲"
"│Item 2                                                                        █"
"│Item 3                                                                        █"
"│Item 4                                                                        █"
"│Item 5                                                                        █"
"│Item 6                                                                        █"
"│Item 7                                                                        █"
"│Item 8                                                                        █"
"│Item 9                                                                        █"
"│Item 10                                                                       ║"
"│Item 11                                                                       ║"
"│Item 12                                                                       ║"
"│Item 13                                                                       ║"
"│Item 14                                                                       ║"
"│Item 15                                                                       ║"
"│Item 16                                                                       ║"
"│Item 17                                                                       ║"
"│Item 18                                                                       ▼"
"└──────────────────────────────────────────────────────────────────────────────┘"
